--- a/la matcha.html
+++ b/la matcha.html
@@ -2,16 +2,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" />
     <title>Singular Spain</title>
     <link rel="stylesheet" media="all" href="assets/css/aos.css" />
 
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css?version=21" />
   </head>
 
   <body>
     <div class="main-wrapper" id="projects-wrapper">
       <header id="main-header" data-aos="fade" data-aos-delay="300">
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-expand-xl navbar-dark">
           <ul class="social-menu d-flex list-unstyled my-0">
             <li>
               <a href="#">
@@ -104,22 +105,22 @@
               <li class="nav-item" id="Cuaderno">
                 <a class="nav-link last-child" href="#">Cuaderno de Campo</a>
               </li>
-              <li class="nav-item d-lg-none">
+              <li class="nav-item d-xl-none">
                 <a class="lang-trigger"> ENG</a> ,
                 <a class="lang-trigger"> FRA</a>
               </li>
             </ul>
           </div>
           <div class="search-blk">
-            <button class="search-mobile d-lg-none" type="button"></button>
-            <input type="text" placeholder="Buscar" class="d-lg-block d-none" />
+            <button class="search-mobile d-xl-none" type="button"></button>
+            <input type="text" placeholder="Buscar" class="d-xl-block d-none" />
             <button
-              class="search-icon d-lg-block d-none"
+              class="search-icon d-xl-block d-none"
               type="button"
             ></button>
           </div>
 
-          <div class="lang-blk d-lg-block d-none">
+          <div class="lang-blk d-xl-block d-none">
             <a class="lang-trigger current-lang"> ESP</a>
             <a class="lang-trigger"> ENG</a>
             <a class="lang-trigger"> FRA</a>
@@ -138,7 +139,7 @@
                   alt=""
                 />
               </div>
-              <h4 class="title text-center mb-4">
+              <h4 class="title text-center mb-3">
                 VIAJE AL CORAZÓN DE LA MANCHA
               </h4>
               <a
@@ -157,7 +158,7 @@
           </section>
           <section class="col-imgs-grid">
             <!--  -->
-            <div class="text-overlay d-lg-none d-md-block d-none">
+            <div class="text-overlay d-xl-none d-md-block d-none">
               <div class="fleuron-wrap">
                 <img
                   src="assets/images/black-leaf.png"
@@ -165,7 +166,7 @@
                   alt=""
                 />
               </div>
-              <h4 class="title text-center mb-4">
+              <h4 class="title text-center mb-3">
                 VIAJE AL CORAZÓN DE LA MANCHA
               </h4>
             </div>
@@ -432,72 +433,68 @@
           <section class="col-text">
             <div class="section-overlay">
               <div class="text-overlay">
-                <div class="fleuron-wrap d-lg-block d-none">
+                <div class="fleuron-wrap d-xl-block d-none">
                   <img
                     src="assets/images/black-leaf.png"
                     class="lazyload icon-leaf"
                     alt=""
                   />
                 </div>
-                <h4 class="title text-center mb-4 d-lg-block d-none">
+                <h4 class="title text-center mb-4 d-xl-block d-none">
                   VIAJE AL CORAZÓN DE LA MANCHA
                 </h4>
                 <div class="text-wrapper truncated">
-                  <div class="Pradell-font">
-                    <p>
-                      La Mancha es El Quĳote, molinos de viento, queso manchego,
-                      azafrán, un sol de justicia y extensiones infinitas de
-                      viñedos. Pero hay mucho más… Al adentrarse, la gran
-                      llanura va dibujando un mosaico de plantaciones que sirven
-                      de santuario a las aves esteparias; y desperdigadas por
-                      toda la región aparecen y desaparecen cientos de lagunas,
-                      que conforman el principal humedal continental de la
-                      península, protegidas como Reserva Mundial de la Biosfera,
-                      donde, según la temporada, se monta el gran show entre las
-                      aves acuáticas y las que están de paso; y entre tanta
-                      bodega gigante, hay viticultores quĳotescos que resisten y
-                      se reafirman como productores de vinos de calidad …
-                    </p>
-                  </div>
-                  <div class="Libre-font">
-                    <p>
-                      <i>
-                        La Mancha suena al Quijote, a molinos de viento, a un
-                        sol de justicia y a llanuras infinitas, a fachadas
-                        encaladas de blanco y azul añil, a queso Manchego, a
-                        azafrán, a ajos morados y a extensiones infinitas de
-                        viñedos que producen un vino no muy reconocido
-                      </i>
-                    </p>
-                  </div>
-                  <div>
-                    <h4 class="Brandon-font-bold">Pero hay mucho más....</h4>
-                    <p>
-                      Según te adentras, la estepa va cobrando forma y, además
-                      de viñedos, se va perfilando un mosaico de plantaciones de
-                      frutales, cereales, almendros, pistachos, olivos y
-                      leguminosas reintroducidos para diversificar la producción
-                      y asegurar el hogar de las <b>aves esteparias</b>. Pero lo
-                      que más sorprende es que
-                      <b> La Mancha tiene su propio oasis ,</b>
-                      <i>
-                        la Reserva de la Biosfera de La Mancha Húmeda y Zona de
-                        Especial Protección para Aves (ZEPA Mancha Norte),
-                      </i>
-                      un paisaje salpicado de ríos y más de
-                      <b>200 lagunas salinas y humedales</b>
-                      en los que se concentra un guirigay espectacular de aves
-                      migratorias que van y vienen según la temporada. Tan
-                      valioso es ese paisaje de humedales, que una zona se ha
-                      protegido como Parque Nacional de Las Tablas de Daimiel, y
-                      otro conjunto de lagunas como Parque Natural de Las
-                      Lagunas del Ruidera, donde se dice que nace el río
-                      Guadiana, allí o muy cerca, en Los Ojos del Guadiana. Pero
-                      hay más lagunas, bastantes más, en lo que viene a llamarse
-                      La Mancha Húmeda, en el mismísimo corazón de sus soleadas
-                      llanuras.
-                    </p>
-                  </div>
+                  <p class="Pradell-font">
+                    La Mancha es El Quĳote, molinos de viento, queso manchego,
+                    azafrán, un sol de justicia y extensiones infinitas de
+                    viñedos. Pero hay mucho más… Al adentrarse, la gran llanura
+                    va dibujando un mosaico de plantaciones que sirven de
+                    santuario a las aves esteparias; y desperdigadas por toda la
+                    región aparecen y desaparecen cientos de lagunas, que
+                    conforman el principal humedal continental de la península,
+                    protegidas como Reserva Mundial de la Biosfera, donde, según
+                    la temporada, se monta el gran show entre las aves acuáticas
+                    y las que están de paso; y entre tanta bodega gigante, hay
+                    viticultores quĳotescos que resisten y se reafirman como
+                    productores de vinos de calidad …
+                  </p>
+                  <br />
+                  <p class="Libre-font">
+                    <i>
+                      La Mancha suena al Quijote, a molinos de viento, a un sol
+                      de justicia y a llanuras infinitas, a fachadas encaladas
+                      de blanco y azul añil, a queso Manchego, a azafrán, a ajos
+                      morados y a extensiones infinitas de viñedos que producen
+                      un vino no muy reconocido
+                    </i>
+                  </p>
+                  <br />
+                  <h4 class="Brandon-font-bold">Pero hay mucho más....</h4>
+                  <br />
+                  <p>
+                    Según te adentras, la estepa va cobrando forma y, además de
+                    viñedos, se va perfilando un mosaico de plantaciones de
+                    frutales, cereales, almendros, pistachos, olivos y
+                    leguminosas reintroducidos para diversificar la producción y
+                    asegurar el hogar de las <b>aves esteparias</b>. Pero lo que
+                    más sorprende es que
+                    <b> La Mancha tiene su propio oasis ,</b>
+                    <i>
+                      la Reserva de la Biosfera de La Mancha Húmeda y Zona de
+                      Especial Protección para Aves (ZEPA Mancha Norte),
+                    </i>
+                    un paisaje salpicado de ríos y más de
+                    <b>200 lagunas salinas y humedales</b>
+                    en los que se concentra un guirigay espectacular de aves
+                    migratorias que van y vienen según la temporada. Tan valioso
+                    es ese paisaje de humedales, que una zona se ha protegido
+                    como Parque Nacional de Las Tablas de Daimiel, y otro
+                    conjunto de lagunas como Parque Natural de Las Lagunas del
+                    Ruidera, donde se dice que nace el río Guadiana, allí o muy
+                    cerca, en Los Ojos del Guadiana. Pero hay más lagunas,
+                    bastantes más, en lo que viene a llamarse La Mancha Húmeda,
+                    en el mismísimo corazón de sus soleadas llanuras.
+                  </p>
                 </div>
                 <div class="text-controls">
                   <div
@@ -523,7 +520,7 @@
                     alt="arrow-white"
                   />
                 </a>
-                <a href="la rutas.html" class="prev mt-4">
+                <a href="la rutas.html" class="prev">
                   <img
                     src="assets/images/arrow-white.png"
                     data-src="assets/images/arrow-white.png"
@@ -551,7 +548,7 @@
                 alt=""
               />
             </div>
-            <div class="cta-3 d-none" data-aos="fade" data-aos-delay="800">
+            <div class="cta-3 d-none">
               <span>Este es otro</span>
               <span>CALL to ACTION</span>
             </div>
@@ -580,6 +577,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.2.0/lazysizes.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script src="assets/js/aos.js"></script>
-    <script src="assets/js/scripts.js"></script>
+    <script src="assets/js/scripts.js?version=3"></script>
   </body>
 </html>
