--- a/la rutas.html
+++ b/la rutas.html
@@ -2,19 +2,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" />
     <title>Singular Spain</title>
-    <link
-      rel="stylesheet"
-      media="all"
-      href="assets/css/aos.css"
-    />
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" media="all" href="assets/css/aos.css" />
+    <link rel="stylesheet" href="assets/css/styles.css?version=21" />
   </head>
 
   <body>
     <div class="main-wrapper">
       <header id="main-header" data-aos="fade" data-aos-delay="300">
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-expand-xl navbar-dark">
           <ul class="social-menu d-flex list-unstyled my-0">
             <li>
               <a href="#">
@@ -48,12 +45,18 @@
             </li>
           </ul>
 
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand p-0" href="index.html">
-            Singular Spain
-          </a>
+          <a class="navbar-brand p-0" href="index.html"> Singular Spain </a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
               <li class="nav-item" id="hola">
@@ -101,19 +104,22 @@
               <li class="nav-item" id="Cuaderno">
                 <a class="nav-link last-child" href="#">Cuaderno de Campo</a>
               </li>
-              <li class="nav-item d-lg-none"> 
-                  <a class="lang-trigger"> ENG</a> , 
-                  <a class="lang-trigger"> FRA</a> 
+              <li class="nav-item d-xl-none">
+                <a class="lang-trigger"> ENG</a> ,
+                <a class="lang-trigger"> FRA</a>
               </li>
             </ul>
           </div>
           <div class="search-blk">
-            <button class="search-mobile d-lg-none" type="button"></button>
-            <input type="text" placeholder="Buscar" class="d-lg-block d-none" />
-            <button class="search-icon d-lg-block d-none" type="button"></button>
+            <button class="search-mobile d-xl-none" type="button"></button>
+            <input type="text" placeholder="Buscar" class="d-xl-block d-none" />
+            <button
+              class="search-icon d-xl-block d-none"
+              type="button"
+            ></button>
           </div>
-         
-          <div class="lang-blk d-lg-block d-none">
+
+          <div class="lang-blk d-xl-block d-none">
             <a class="lang-trigger current-lang"> ESP</a>
             <a class="lang-trigger"> ENG</a>
             <a class="lang-trigger"> FRA</a>
@@ -132,7 +138,7 @@
             />
           </section>
           <section class="col-menu">
-            <div class="fleuron-wrap d-lg-none">
+            <div class="fleuron-wrap d-xl-none">
               <img
                 src="assets/images/black-leaf.png"
                 class="lazyload icon-leaf"
@@ -151,7 +157,7 @@
           <section class="col-text">
             <div class="section-overlay">
               <div class="text-overlay">
-                <div class="fleuron-wrap  d-lg-block d-none">
+                <div class="fleuron-wrap d-xl-block d-none">
                   <img
                     src="assets/images/black-leaf.png"
                     class="lazyload icon-leaf"
@@ -166,7 +172,7 @@
                     temporada en que se viaja y la disponibilidad del
                     <i> alojamiento </i>.
                   </p>
-
+                  <br />
                   <p>
                     <b>
                       Y si os atrae una zona en particular fuera de nustras
@@ -174,14 +180,14 @@
                       MEDIDA.
                     </b>
                   </p>
-
+                  <br />
                   <p>
                     ¿O quizás aún no tienes claro qué ruta escoger, o en qué
                     fechas viajar? Subscríbete a nuestro <u>Newsletter</u> y te
                     mantendremos al corriente de fechas y rutas, así como de
                     ideas en el mundo rural.
                   </p>
-
+                  <br />
                   <p>
                     ¿O quizás aún no tienes claro qué ruta escoger, o en qué
                     fechas viajar? Subscríbete a nuestro Newsletter y te
@@ -220,12 +226,10 @@
       </main>
     </div>
 
-    <script
-      src="assets/js/jquery.min.js" 
-    ></script>
+    <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.2.0/lazysizes.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="assets/js/scripts.js"></script>
+    <script src="assets/js/scripts.js?version=3"></script>
   </body>
 </html>
