mobile and tablet edits

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
     <title>Singular Spain</title>
     <link rel="stylesheet" media="all" href="assets/css/aos.css" />
-    <link rel="stylesheet" href="assets/css/styles.css?version=27" />
+    <link rel="stylesheet" href="assets/css/styles.css?version=28" />
   </head>
 
   <body>
@@ -128,7 +128,7 @@
             data-aos="fade"
           />
           <div class="section-overlay">
-            <div class="text-overlay" data-aos="fade" data-aos-delay="1200">
+            <div class="text-overlay opacity-0">
               Un viaje hacia la singularidad.
             </div>
             <div class="arrow-fixed d-none">
@@ -144,18 +144,14 @@
             <div class="call-to-actions-items text-center">
               <a
                 href="#"
-                class="cta-1 d-block"
-                data-aos="fade"
-                data-aos-delay="3000"
+                class="cta-1 d-none"
               >
                 <span>UBEDA en DICIEMBRE</span>
                 <span>Últimas plazas disponibles</span>
               </a>
               <a
                 href="#"
-                class="cta-2 d-block"
-                data-aos="fade"
-                data-aos-delay="3000"
+                class="cta-2 d-none"
               >
                 <span>Sur de Gredos</span>
                 <span>Nuevas fechas</span>
@@ -223,6 +219,6 @@
     <script src="assets/js/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.2.0/lazysizes.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="assets/js/scripts.js?version=3"></script>
+    <script src="assets/js/scripts.js?version=4"></script>
   </body>
 </html>
