--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
     <title>Singular Spain</title>
     <link rel="stylesheet" media="all" href="assets/css/aos.css" />
-    <link rel="stylesheet" href="assets/css/styles.css?version=28" />
+    <link rel="stylesheet" href="assets/css/styles.css?version=45" />
   </head>
 
   <body>
@@ -99,7 +99,7 @@
                 <a class="nav-link last-child" href="#">Cuaderno de Campo</a>
               </li>
               <li class="nav-item d-xl-none"> 
-                  <a class="lang-trigger"> ENG</a> , 
+                  <a class="lang-trigger"> ENG</a> &
                   <a class="lang-trigger"> FRA</a> 
               </li>
             </ul>
@@ -110,7 +110,7 @@
             <button class="search-icon d-xl-block d-none" type="button"></button>
           </div>
          
-          <div class="lang-blk d-xl-block d-none">
+          <div class="lang-blk d-xl-flex d-none">
             <a class="lang-trigger current-lang"> ESP</a>
             <a class="lang-trigger"> ENG</a>
             <a class="lang-trigger"> FRA</a>
@@ -131,7 +131,7 @@
             <div class="text-overlay opacity-0">
               Un viaje hacia la singularidad.
             </div>
-            <div class="arrow-fixed d-none">
+            <div class="arrow-fixed opacity-0">
               <a href="#main-hola">
                 <img
                   src="assets/images/arrow-white.png"
@@ -144,21 +144,21 @@
             <div class="call-to-actions-items text-center">
               <a
                 href="#"
-                class="cta-1 d-none"
+                class="cta-1 opacity-0"
               >
                 <span>UBEDA en DICIEMBRE</span>
                 <span>Últimas plazas disponibles</span>
               </a>
               <a
                 href="#"
-                class="cta-2 d-none"
+                class="cta-2 opacity-0"
               >
                 <span>Sur de Gredos</span>
                 <span>Nuevas fechas</span>
               </a>
               <a
                 href="#"
-                class="cta-3 d-none" 
+                class="cta-3 opacity-0" 
               >
                 <span>Este es otro</span>
                 <span>CALL to ACTION</span>
@@ -219,6 +219,6 @@
     <script src="assets/js/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.2.0/lazysizes.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="assets/js/scripts.js?version=4"></script>
+    <script src="assets/js/scripts.js?version=7"></script>
   </body>
 </html>
