--- a/la matcha.html
+++ b/la matcha.html
@@ -5,8 +5,7 @@
     <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" />
     <title>Singular Spain</title>
     <link rel="stylesheet" media="all" href="assets/css/aos.css" />
-
-    <link rel="stylesheet" href="assets/css/styles.css?version=28" />
+    <link rel="stylesheet" href="assets/css/styles.css?version=45" />
   </head>
 
   <body>
@@ -106,7 +105,7 @@
                 <a class="nav-link last-child" href="#">Cuaderno de Campo</a>
               </li>
               <li class="nav-item d-xl-none">
-                <a class="lang-trigger"> ENG</a> ,
+                <a class="lang-trigger"> ENG</a> &
                 <a class="lang-trigger"> FRA</a>
               </li>
             </ul>
@@ -120,7 +119,7 @@
             ></button>
           </div>
 
-          <div class="lang-blk d-xl-block d-none">
+          <div class="lang-blk d-xl-flex d-none">
             <a class="lang-trigger current-lang"> ESP</a>
             <a class="lang-trigger"> ENG</a>
             <a class="lang-trigger"> FRA</a>
@@ -130,7 +129,7 @@
 
       <main id="main-content">
         <section class="main-projects">
-          <section class="col-mobile d-md-none d-block">
+          <section class="col-mobile d-xl-none d-block">
             <div class="text-overlay">
               <div class="fleuron-wrap">
                 <img
@@ -157,19 +156,7 @@
             </div>
           </section>
           <section class="col-imgs-grid">
-            <!--  -->
-            <div class="text-overlay d-xl-none d-md-block d-none">
-              <div class="fleuron-wrap">
-                <img
-                  src="assets/images/black-leaf.png"
-                  class="lazyload icon-leaf"
-                  alt=""
-                />
-              </div>
-              <h4 class="title text-center mb-3">
-                VIAJE AL CORAZÓN DE LA MANCHA
-              </h4>
-            </div>
+            <!--  -->  
             <div class="imgs-grid-wrapper">
               <div class="grid-col">
                 <a
@@ -294,12 +281,11 @@
                   <div class="details-wrapper Pradell-font">
                     <p>
                       <b class="Brandon-font-bold">
-                        Grupos reducidos de 6 a 15 viajeros para
-                      </b>
+                        Grupos reducidos de 6 a 15 viajeros
+                      </b> para disfrutar más del viaje.
                     </p>
                     <p>
-                      disfrutar más del viaje.
-                      <br />
+                      
                       • Si sois un
                       <b class="Brandon-font-bold">grupo cerrado </b> de amigos
                       y/o familiares de más de 6 personas:
@@ -338,9 +324,9 @@
               </li>
               <li class="pro-4">
                 <span class="user-select-none">ALOJAMIENTO</span>
-                <div class="details d-none Pradell-font">
-                  <p>
-                    Hotel, Hospedería, Parador o Casa de Campo de 4 estrellas La
+                <div class="details d-none ">
+                  <p class="Pradell-font">
+                    Hotel, Hospedería, Parador o Casa de Campo de <b>4 estrellas</b> La
                     categoría se puede adaptar a vuestros intereses y según
                     disponibilidad.
                   </p>
@@ -362,24 +348,23 @@
                       y el precio no se adapta a vuestro presupuesto, no dejéis
                       de poneros en contacto con nosotras.
                     </p>
+                    <br>
                     <div>
                       <u>Precio de la ruta para un grupo de 8 personas:</u>
 
                       <ul>
                         <li>
-                          En coche propio sin guía acompañante 165€ persona/día
-                          aprox.*
+                          En coche propio sin guía acompañante <b class="Brandon-font-bold">165€ persona/día aprox.*</b>
                         </li>
                         <li>
-                          En coche propio con guía acompañante 210 persona/día
-                          aprox.*
+                          En coche propio con guía acompañante <b class="Brandon-font-bold">210 persona/día aprox.*</b>
                         </li>
                         <li>
-                          Con chófer + guía acompañante 305€ persona/día aprox.*
+                          Con chófer + guía acompañante <b class="Brandon-font-bold">305€ persona/día aprox.*</b>
                         </li>
                       </ul>
                     </div>
-
+                    <br>
                     <div>
                       <b class="Brandon-font-bold">Incluye:</b>
 
@@ -393,7 +378,7 @@
                         </li>
                       </ul>
                     </div>
-
+                    <br>
                     <div>
                       <b class="Brandon-font-bold">No incluye:</b>
 
@@ -410,7 +395,7 @@
                         </li>
                       </ul>
                     </div>
-
+                    <br>
                     <div>
                       <b class="Brandon-font-bold"
                         >*NOTA: EL PRECIO ES APROXIMADO</b
@@ -575,6 +560,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.2.0/lazysizes.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script src="assets/js/aos.js"></script>
-    <script src="assets/js/scripts.js?version=4"></script>
+    <script src="assets/js/scripts.js?version=7"></script>
   </body>
 </html>
