--- a/la rutas.html
+++ b/la rutas.html
@@ -5,7 +5,7 @@
     <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" />
     <title>Singular Spain</title>
     <link rel="stylesheet" media="all" href="assets/css/aos.css" />
-    <link rel="stylesheet" href="assets/css/styles.css?version=28" />
+    <link rel="stylesheet" href="assets/css/styles.css?version=45" />
   </head>
 
   <body>
@@ -105,7 +105,7 @@
                 <a class="nav-link last-child" href="#">Cuaderno de Campo</a>
               </li>
               <li class="nav-item d-xl-none">
-                <a class="lang-trigger"> ENG</a> ,
+                <a class="lang-trigger"> ENG</a> &
                 <a class="lang-trigger"> FRA</a>
               </li>
             </ul>
@@ -119,7 +119,7 @@
             ></button>
           </div>
 
-          <div class="lang-blk d-xl-block d-none">
+          <div class="lang-blk d-xl-flex d-none">
             <a class="lang-trigger current-lang"> ESP</a>
             <a class="lang-trigger"> ENG</a>
             <a class="lang-trigger"> FRA</a>
@@ -230,6 +230,6 @@
     <script src="assets/js/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.2.0/lazysizes.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="assets/js/scripts.js?version=4"></script>
+    <script src="assets/js/scripts.js?version=7"></script>
   </body>
 </html>
